# cli

./: #.githubpolicy  ++  .bazelrc  .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser-hsm.yml  .goreleaser.yml  .jekyll-metadata  Api.class.php  BUILD.bazel  Brewfile  CODEOWNERS  Cli  CloudFormation  Dockerfile  Dsta  El problema  EthicalAds.vcf  Facebook  Fix  Gemfile  Google.com  Julius080-go.sum  Kkkkaaaannn  LICENSE  MIT LİCENCE  Makefile  Microsoft  NFT  Pubg kr2  README  README.md  README_CN.md  S  SECURITY.md  Seguridad  Tempet ND  Trunk  (+91 more)
.bundle/: config
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: Binance - Cryptocurrency Exchange for Bitcoin, Ethereum & Altcoins  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  Ellitvin115  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SECURITY.md.denominionet  Softwilft meSECURITY.md  dependabot.yml  eslintrc.typescript-compat.js  shafiul2s.github
.github (github)/: SECURITY.patch
CH02/: orders_with_predicted_value.csv  tech-approval-required.ipynb
HUERTAGROUP1/: .bowerrc  .gitattributes
Owner/: RepowithArguments
_data/: examples.yaml
_includes/: checkout-examples.html  create-examples.html  docs-nav-content.html  docs-nav.html  example.html  foot.html  footer.html  gh-pr-create-examples.html  head.html  header.html  list-examples.html  marketing-nav.html  marketing-subnav.html  nav.html  status-examples.html  view-examples.html
_layouts/: default.html  page.html
_sass/: _docs-nav.scss  _example.scss  _nav.scss  docs-nav.scss  example-custom-styles.scss  example.scss  global.scss  landing.scss  manual-content.scss  markdown-body.scss  marketing-nav.scss  marketing-site.scss
acceptance/: README.md  acceptance_test.go  pr_test.go
android.useAndroid.edge/: id.url.Maps.Force_Canvas
api/: BUILD.bazel  REACTION GO..go  api.go  cache.go  cache_test.go  client.go  client_rest_test.go  client_test.go  export_pr.go  export_pr_test.go  export_repo.go  fake_http.go  http_client.go  http_client_test.go  http_client_test_C0_sanitizer_go1_21.go  http_client_v1_21_test.go  pull_request_test.go  queries.go  queries_actions.go  queries_branch_issue_reference.go  queries_bulk.go  queries_comments.go  queries_gist.go  queries_issue.go  queries_issue_test.go  queries_label.go  queries_label_test.go  queries_org.go  queries_pr.go  queries_pr_review.go  queries_pr_test.go  queries_project.go  queries_projects_v2.go  queries_projects_v2_test.go  queries_release.go  queries_repo.go  queries_repo_test.go  queries_search.go  queries_sponsors.go  queries_sponsors_test.go  (+7 more)
auth/: BUILD.bazel  oauth.go  oauth_test.go
builder/: query_builder.go
cmd/gen-docs/: BUILD.bazel  main.go  main_test.go
cmd/gh/: BUILD.bazel  integration_test.go  main.go  main_test.go  virtual_terminal.go  virtual_terminal_other.go
command/: BUILD.bazel  add.go  alias.go  alias_test.go  api.go  badge.go  bulk.go  checkForUpdate.go  checkUpdate.go  clone.go  commit.go  common.go  completion.go  completion_test.go  config.go  config_test.go  credits.go  editor.go  fake_users_and_teams.go  fork.go  gist.go  gist_test.go  hackyHelp.go  help.go  help_test.go  issue.go  issue_lookup.go  issue_test.go  list.go  pr.go  pr_checkout.go  pr_checkout_test.go  pr_create.go  pr_create_test.go  pr_diff.go  pr_diff_test.go  pr_lookup.go  pr_lookupXXX.go  pr_review.go  pr_review_test.go  (+16 more)
command/fixtures/: pr.json
command/repo/: repo.go  repo_clone.go  repo_create.go  repo_credits.go  repo_fork.go  repo_test.go  repo_view.go
context/: BUILD.bazel  blank_context.go  config.go  config_decoder.go  config_encoder.go  config_file.go  config_file_test.go  config_service.go  config_setup.go  config_success.go  config_type.go  config_viewer.go  context.go  formatted.go  ghrepo.go  remote.go  remote_test.go  testing.go
doc/: gh.1.md
docs/: README.md  codespaces.md  command-line-syntax.md  gh-cli-linux.sh  gh-vs-hub.md  install_linux.MD  install_linux.md  multiple-accounts.md  project-layout.md  releasing.md  source.md  triage.md  working-with-us.md
example/: main.go
git/: BUILD.bazel  client.go  client_test.go  command.go  errors.go  git.go  git_test.go  local_repo.go  local_repo_test.go  objects.go  remote.go  remote_test.go  ssh_config.go  ssh_config_test.go  url.go  url_test.go
git/fixtures/: .gitignore
git/fixtures/simple.git/: config
git/fixtures/simple.git/logs/refs/heads/: main
git/fixtures/simple.git/refs/heads/: main
git/polly/: git.go
git/remoterepo/: remote_repo.go
git/testdata/: included.conf  ssh_config1.conf  ssh_config2.conf  ssh_config3.conf
github/: branch.go  client.go  config.go  config_decoder.go  config_encoder.go  config_service.go  hosts.go  http.go  localrepo.go  project.go  pull_request.go  remote.go
graphql/: client.go  queries.go
internal/: host.go
internal/cobrafish/: BUILD.bazel  completion.go
internal/ghrepo/: BUILD.bazel  repo.go  repo_test.go
liveshare/: client.go  port_forwarder.go  session.go  session_test.go  ssh.go
manual/: examples.html  gh.md  gh_issue.md  gh_issue_create.md  gh_issue_list.md  gh_issue_status.md  gh_issue_view.md  gh_pr.md  gh_pr_checkout.md  gh_pr_create.md  gh_pr_list.md  gh_pr_status.md  gh_pr_view.md  index.html  index.md  installation.md
markdown/: highlight.go  markdown.go  theme.go
noneadd2427/: cli
pkg/browser/: BUILD.bazel  browser.go  browser_test.go
pkg/githubtemplate/: BUILD.bazel  github_template.go  github_template_test.go
pkg/surveyext/: BUILD.bazel  editor.go  editor_manual.go  editor_test.go
script/: bootstrap  build  build-and-watch  build.bat  build.go  changelog  cibuild  createrepo.sh  distributions  label-assets  layout_telkomsel_cash.xml  pkgmacos  (+18 more)
update/: BUILD.bazel  checkForUpdate.go  update.go  update_test.go
utils/: BUILD.bazel  color.go  prepare_cmd.go  table_printer.go  table_printer_test.go  table_printer_unix.go  table_printer_windows.go  terminal.go  utils.go  utils_test.go  yaml.go  yaml_test.go
utils/cli-linux-install/: install.gh-y  install.gh-y.sh
(+1506 files in other folders)
