load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["completion.go"],
    importpath = "github.com/cli/cli/internal/cobrafish",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)
