load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["repo.go"],
    importpath = "github.com/cli/cli/internal/ghrepo",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = ["repo_test.go"],
    embed = [":go_default_library"],
)
