load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["browser.go"],
    importpath = "github.com/cli/cli/pkg/browser",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_shlex//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["browser_test.go"],
    embed = [":go_default_library"],
)
